syntax = "proto3";
package mun.mun;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "mun/params.proto";
import "mun/version.proto";
// this line is used by starport scaffolding # 1

option go_package = "mun/x/mun/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/mun/mun/params";
  }

	// Queries a list of Version items.
	rpc VersionAll(QueryAllVersionRequest) returns (QueryAllVersionResponse) {
		option (google.api.http).get = "/mun/mun/version";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetVersionRequest {
	  string index = 1;

}

message QueryGetVersionResponse {
	Version version = 1 [(gogoproto.nullable) = false];
}

message QueryAllVersionRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllVersionResponse {
	repeated Version version = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
